Fix formatting problem on small screens

--- a/src/components/assets/css/about.css
+++ b/src/components/assets/css/about.css
@@ -1,7 +1,8 @@
 .colour-box {
 	color: white;
 	margin: 1rem;
-	padding: 4rem;
+	padding-top: 4rem;
+	padding-bottom: 4rem;
 	text-align: center;
 	font-weight: bold;
 	font-size: x-large;
